# szurubooru-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: CD.yaml  CI.yaml
docs/: Makefile  client.rst  conf.py  examples.rst  fields.rst  index.rst  models.rst  tokens.rst
src/: client.rs  errors.rs  lib.rs  models.rs  tests.rs
szurubooru-client/: CHANGELOG.md  Cargo.toml  pyproject.toml
szurubooru-client-docs/: build.sh  mkdocs.yml  requirements.txt
szurubooru-client-docs/docs/: index.md
szurubooru-client/src/: client.rs  errors.rs  lib.rs  models.rs  tokens.rs
szurubooru-client/src/py/: asynchronous.rs  mod.rs  synchronous.rs
szurubooru-client/szurubooru_client/: __init__.py  models.py  tokens.py
szurubooru-integration-test/: Cargo.toml  docker-compose.yml  start_szurubooru.sh
szurubooru-integration-test/src/: main.rs
tests/python-sync/: config.yaml  docker-compose.yml  requirements.txt  test.py  test.sh
tests/rust-test/: Cargo.toml  config.yaml  docker-compose.yml  test.sh
tests/rust-test/src/: main.rs
