[package]
name = "szurubooru-client"
version = "0.1.1"
edition = "2021"
authors = ["Scott Lyons <scottalyons@gmail.com>"]
description = "A wrapper around the Szurubooru API, including type-safe Query and Sort tokens"
license = "MIT"
repository = "https://github.com/slyons/szurubooru-client"
readme = "README.md"
keywords = ["image_host", "szurubooru", "booru"]

[dependencies]
base64 = "0.22.1"
bytes = "1.6.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
futures-util = "0.3.30"
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
thiserror = "1.0.63"
tracing = "0.1.40"
url = "2.5.2"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.39.2", features = ["full"] }
